--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
             },
             {
                 id: 4,
-                name: 'Nồi chiên không dầu Lock&Lock',
-                price: '1.990.000₫',
+                name: 'Giày Cầu Lông Li-Ning',
+                price: '1.090.000₫',
                 imageUrl: 'https://placehold.co/400x400/c0392b/ffffff?text=Gia+Dụng+1',
-                affiliateUrl: 'https://shopee.vn',
-                category: 'Nhà cửa & Đời sống'
+                affiliateUrl: 'https://s.shopee.vn/1VpkwCGfYb',
+                category: 'Thể thao'
             },
         ];
         // --- KẾT THÚC PHẦN CHỈNH SỬA ---
@@ -353,4 +353,5 @@
     </script>
 </body>
 </html>
+
 
